sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:24: error: 'while' expected but '}' found.
   } while(fini !=0)
   ^AlgCocktailSort2:24: error: ';' expected but 'while' found.
   } while(fini !=0)
     ^AlgCocktailSort2:28: error: Unmatched closing brace '}' ignored here
}
^